--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -599,7 +599,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6de-z3-7Uw">
                                             <rect key="frame" x="120" y="135" width="84" height="57"/>
                                             <animations/>
-                                            <state key="normal" title="אישור">
+                                            <state key="normal" title="אחלה">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -678,17 +678,17 @@
                                 </connections>
                             </visualEffectView>
                             <containerView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iar-eB-Wi1">
-                                <rect key="frame" x="0.0" y="472" width="600" height="128"/>
+                                <rect key="frame" x="0.0" y="484" width="600" height="116"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="x48-GI-4iR"/>
+                                    <constraint firstAttribute="height" constant="116" id="x48-GI-4iR"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="8rP-XI-t30" kind="embed" id="b9S-VN-Zo7"/>
                                 </connections>
                             </containerView>
                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n0e-IL-u3L">
-                                <rect key="frame" x="20" y="404" width="60" height="60"/>
+                                <rect key="frame" x="20" y="416" width="60" height="60"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vFd-fs-WSC">
                                     <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2476,31 +2476,73 @@
         <scene sceneID="FOf-vI-u3x">
             <objects>
                 <viewController id="8rP-XI-t30" customClass="PublicationsThumbnailsCollectionViewController" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JjK-JU-mGs"/>
+                        <viewControllerLayoutGuide type="bottom" id="QDo-vf-F7H"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="K4U-bc-xzP">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="116"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fv4-BX-Ufw">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="128"/>
+                            <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fv4-BX-Ufw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="116"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gGM-2F-gaJ">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="gGM-2F-gaJ">
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="yTY-Il-4Pp">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="thumbnailCollectionViewCellID" id="yTY-Il-4Pp" customClass="ThumbnailCollectionViewCell" customModule="FoodCollector" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="8" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lHC-S9-02b">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2rN-GG-1Xj">
+                                                    <rect key="frame" x="1" y="0.0" width="99" height="99"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Bcg-iQ-vd0">
+                                                    <rect key="frame" x="4" y="3" width="93" height="93"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </imageView>
+                                            </subviews>
                                             <animations/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <animations/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="2rN-GG-1Xj" secondAttribute="trailing" constant="-8" id="0AZ-XR-7uq"/>
+                                            <constraint firstItem="lHC-S9-02b" firstAttribute="top" secondItem="yTY-Il-4Pp" secondAttribute="topMargin" constant="-8" id="2A8-pG-2a9"/>
+                                            <constraint firstItem="lHC-S9-02b" firstAttribute="leading" secondItem="yTY-Il-4Pp" secondAttribute="leadingMargin" constant="-8" id="3L1-d9-d4f"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="lHC-S9-02b" secondAttribute="bottom" constant="-8" id="8Bl-DR-oZH"/>
+                                            <constraint firstItem="2rN-GG-1Xj" firstAttribute="top" secondItem="yTY-Il-4Pp" secondAttribute="topMargin" constant="-8" id="Edu-9Z-Fso"/>
+                                            <constraint firstItem="Bcg-iQ-vd0" firstAttribute="leading" secondItem="yTY-Il-4Pp" secondAttribute="leadingMargin" constant="-4" id="MUT-Wy-erH"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Bcg-iQ-vd0" secondAttribute="trailing" constant="-5" id="e1I-oe-IOD"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Bcg-iQ-vd0" secondAttribute="bottom" constant="-4" id="hXR-DW-Ut4"/>
+                                            <constraint firstItem="Bcg-iQ-vd0" firstAttribute="top" secondItem="yTY-Il-4Pp" secondAttribute="topMargin" constant="-5" id="heE-n8-ppZ"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="2rN-GG-1Xj" secondAttribute="bottom" constant="-7" id="vtM-jz-KJL"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="lHC-S9-02b" secondAttribute="trailing" constant="-8" id="vtf-Zt-ExV"/>
+                                            <constraint firstItem="2rN-GG-1Xj" firstAttribute="leading" secondItem="yTY-Il-4Pp" secondAttribute="leadingMargin" constant="-7" id="z61-lA-BNB"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="Bcg-iQ-vd0" id="EWU-sM-ffz"/>
+                                            <outlet property="shadowView" destination="lHC-S9-02b" id="zl7-VV-yOH"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
