--- a/FoodCollector/PublicationEditorTVCImageCustomCell.xib
+++ b/FoodCollector/PublicationEditorTVCImageCustomCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,14 +17,17 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlaceholderActivity" translatesAutoresizingMaskIntoConstraints="NO" id="2Fx-ne-G5I">
                         <rect key="frame" x="111" y="38" width="98" height="90"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="98" id="INo-dc-C9s"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="No-photo" translatesAutoresizingMaskIntoConstraints="NO" id="5J7-kJ-tvb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+                        <animations/>
                     </imageView>
                 </subviews>
+                <animations/>
                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 <constraints>
                     <constraint firstItem="2Fx-ne-G5I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="0gu-rN-lDz"/>
@@ -36,6 +39,7 @@
                     <constraint firstItem="5J7-kJ-tvb" firstAttribute="centerX" secondItem="2Fx-ne-G5I" secondAttribute="centerX" id="yuw-As-wU2"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="publicationImage" destination="5J7-kJ-tvb" id="Rn8-6N-9eJ"/>
             </connections>
